Refacto + Split javafx and client