@@ -1,19 +1,9 @@
 plugins {
-    id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'java'
 }
 
 group = 'fr.neutronstars'
 version = '1.0-SNAPSHOT'
-
-ext {
-    javaFxVersion = '25.0.2'
-}
-
-javafx {
-    version = javaFxVersion
-    modules = [ 'javafx.controls' ]
-}
 
 repositories {
     mavenCentral()
@@ -21,29 +11,4 @@ repositories {
 
 dependencies {
     implementation project(':core')
-    implementation "org.openjfx:javafx-controls:$javaFxVersion"
-    implementation "org.openjfx:javafx-graphics:$javaFxVersion"
-}
-
-application {
-    mainClass = 'fr.neutronstars.survival.client.launcher.SurvivalClientLauncher'
-    mainModule = 'fr.neutronstars.survival.client'
-}
-
-java {
-    def javaVersion = JavaVersion.toVersion(25)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(25)
-    }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.release = 25
-    options.encoding = 'UTF-8'
-}
-
-run {
-    jvmArgs += ['--enable-native-access=javafx.graphics']
 }
